--- a/lab_mid_tasbeeh/pubspec.yaml
+++ b/lab_mid_tasbeeh/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.16.0
+  firebase_database: ^9.0.13
   rflutter_alert: ^1.0.2
   splashscreen:
 
