--- a/fee_management_system/pubspec.yaml
+++ b/fee_management_system/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  carousel_slider: ^4.0.0
+  proste_bezier_curve: ^2.0.2
 
 dev_dependencies:
   flutter_test:
