--- a/fee_management_system/pubspec.yaml
+++ b/fee_management_system/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0
   proste_bezier_curve: ^2.0.2
+  dropdown_button2: ^1.6.2
+  firebase_database: ^9.0.19
+  firebase_core: ^1.19.2
+  cloud_firestore: ^3.3.0
 
 dev_dependencies:
   flutter_test:
